--- a/lib/thexr_web/live/space_live/show.html.heex
+++ b/lib/thexr_web/live/space_live/show.html.heex
@@ -30,10 +30,34 @@
 
 <span><%= live_patch "Edit", to: Routes.space_show_path(@socket, :edit, @space), class: "button" %></span> |
 <span><%= live_redirect "Back", to: Routes.space_index_path(@socket, :index) %></span>
+<style>
+  li.selected {
+    border: 1px solid red;
+  }
+  li.previously_selected {
+    border: 1px solid orange;
+  }
+</style>
+
+<%= if @selected_previous_entity_id && @selected_entity_id do %>
+<button phx-click="parent_selected_entities">Parent</button>
+<% end %>
 
 <ul>
-  <%= for entity <- @space.entities do %>
-    <li> <%= entity.id %> <%= entity.name %>  <%= entity.type %> <button phx-click={Phoenix.LiveView.JS.push("delete_entity", value: %{entity_id: entity.id})}>X</button></li>
+  <%= for entity <- @entities do %>
+    <% class = cond do
+        (@selected_entity_id == entity.id) -> "selected"
+        (@selected_previous_entity_id == entity.id) -> "previously_selected"
+        true -> ""
+      end
+    %>
+    
+    <li class={class} id={"#{entity.id}"} phx-click={Phoenix.LiveView.JS.push("select_entity", value: %{id: entity.id})}> 
+      <%= entity.id %>
+      <%= entity.name %> 
+       <%= entity.type %> 
+       <button phx-click={Phoenix.LiveView.JS.push("delete_entity", value: %{entity_id: entity.id})}>X</button>
+    </li>
   <% end %>
 </ul>
 
