--- a/lib/thexr_web/live/space_live/show.html.heex
+++ b/lib/thexr_web/live/space_live/show.html.heex
@@ -71,6 +71,9 @@
 <%= if @selected_entity do %>
 <hr>
 <h2>Selected Entity</h2>
+Here are the components
+<%= inspect @selected_entity_components %>
+
 <% end %>
 
 <textarea>
