--- a/lib/thexr_web/templates/layout/experience.html.heex
+++ b/lib/thexr_web/templates/layout/experience.html.heex
@@ -11,6 +11,8 @@
 
    
     <script src="https://preview.babylonjs.com/babylon.js"></script>
+    <script src="https://preview.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+   
  <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/experience.js")}></script>
 
  
