make progress on creating a space

--- a/lib/thexr_web/live/space_live/index.html.heex
+++ b/lib/thexr_web/live/space_live/index.html.heex
@@ -1,3 +1,4 @@
+
 <h1>Listing Spaces</h1>
 
 <%= if @live_action in [:new, :edit] do %>
@@ -27,7 +28,7 @@
         <td><%= space.slug %></td>
 
         <td>
-          <span><%= live_redirect "Show", to: Routes.space_show_path(@socket, :show, space) %></span>
+          <span><%= link "Enter", to: Routes.experience_path(@socket, :show, space.slug) %></span>
           <span><%= live_patch "Edit", to: Routes.space_index_path(@socket, :edit, space) %></span>
           <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: space.id, data: [confirm: "Are you sure?"] %></span>
         </td>
