can select a template when making a new space

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -87,7 +87,12 @@
   text-decoration: none;
   cursor: pointer;
 }
+/* my styles */
 
 .template_area {
   height: 20em;
+}
+
+#templates .selected {
+  border: 1px solid red;
 }
