--- a/lib/thexr_web/live/space_live/index.html.heex
+++ b/lib/thexr_web/live/space_live/index.html.heex
@@ -7,6 +7,7 @@
     title: @page_title,
     action: @live_action,
     space: @space,
+    selected_template_id: @selected_template_id,
     return_to: Routes.space_index_path(@socket, :index) %>
 <% end %>
 
