--- a/lib/thexr_web/live/space_live/form_component.html.heex
+++ b/lib/thexr_web/live/space_live/form_component.html.heex
@@ -8,15 +8,8 @@
     phx-target={@myself}
     phx-change="validate"
     phx-submit="save">
-  
-    <%= label f, :name %>
-    <%= text_input f, :name %>
-    <%= error_tag f, :name %>
-  
-    <%= label f, :description %>
-    <%= textarea f, :description %>
-    <%= error_tag f, :description %>
-  
+
+      
   <%= if @action == :edit do %>
 
     <%= label f, :slug %>
@@ -25,8 +18,21 @@
 
   <% end %>
   
+    <%= label f, :name %>
+    <%= text_input f, :name %>
+    <%= error_tag f, :name %>
+  
+    <%= label f, :description %>
+    <%= textarea f, :description %>
+    <%= error_tag f, :description %>
+
+
+  <%= if @action == :new do %>
+    <%= live_component ThexrWeb.SpaceLive.TemplatesComponent, id: :templates %>
+  <% end %>
+  
     <div>
-      <%= submit "Save", phx_disable_with: "Saving..." %>
+      <%= submit "Save", phx_disable_with: "Saving...", disabled: (@selected_template_id == nil) %>
     </div>
   </.form>
 </div>
