--- a/lib/thexr_web/templates/layout/xr_root.html.heex
+++ b/lib/thexr_web/templates/layout/xr_root.html.heex
@@ -13,7 +13,7 @@
     <script src="https://preview.babylonjs.com/babylon.js"></script>
     <script src="https://preview.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
    
- <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/experience.js")}></script>
+ <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/orchestrator.js")}></script>
 
  
   </head>
