--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -67,7 +67,7 @@
 }
 
 .phx-modal-content {
-  background-color: #fefefe;
+  background-color: #350808;
   margin: 15vh auto;
   padding: 20px;
   border: 1px solid #888;
@@ -91,8 +91,8 @@
 
 
 body {
-  color: gray;
-  background-color: #09061c83;
+  color: rgb(226, 212, 212);
+  background-color: #07031fd3;
 }
 
 input, textarea, select {
@@ -109,3 +109,14 @@ input, textarea, select {
   border: 1px solid red;
 }
 
+ul.entitiesList li.selected {
+  border: 1px solid yellow;
+}
+
+ul.componentsList li.selected {
+  border: 1px solid yellow;
+}
+
+.vector3_input input {
+  width: 5em;
+}
