--- a/lib/thexr_web/templates/space/show.html.heex
+++ b/lib/thexr_web/templates/space/show.html.heex
@@ -1,4 +1,4 @@
-<%= render "edit_menu.html", space: @space %>
+<%= render "_edit_menu.html", space: @space %>
 
 <canvas id="spaceCanvas"></canvas>
 
