session 39: try improve add entity speed, debounce and css tweaks

--- a/lib/thexr_web/templates/page/index.html.heex
+++ b/lib/thexr_web/templates/page/index.html.heex
@@ -1,4 +1,4 @@
-<section class="phx-hero">
+<section>
   <h1><%= gettext "Welcome to %{name}", name: "thexr.space" %></h1>
   <p>Create and Share Experiences in an Extended Reality Space</p>
 </section>
