--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -67,7 +67,7 @@
 }
 
 .phx-modal-content {
-  background-color: #350808;
+  background-color: #140a4e;
   margin: 15vh auto;
   padding: 20px;
   border: 1px solid #888;
