session 43: add fog to settings

--- a/lib/thexr_web/live/space_live/form_component.html.heex
+++ b/lib/thexr_web/live/space_live/form_component.html.heex
@@ -27,6 +27,12 @@
     <%= inputs_for f, :settings, fn ff -> %>
       <%= label ff, :clear_color %>
       <%= text_input ff, :clear_color %>
+      
+      <%= label ff, :fog_color %>
+      <%= text_input ff, :fog_color %>
+      
+      <%= label ff, :fog_density %>
+      <%= text_input ff, :fog_density %>
     <% end %>
 
   <% end %>
