--- a/lib/thexr_web/templates/layout/root.html.heex
+++ b/lib/thexr_web/templates/layout/root.html.heex
@@ -8,6 +8,19 @@
     <%= live_title_tag assigns[:page_title] || "Thexr.space", suffix: "" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
+   <%= if Application.get_env(:honeybadger, :environment_name) == :prod do %>
+
+      <script src="//js.honeybadger.io/v3.2/honeybadger.min.js" type="text/javascript"></script>
+  
+      <script type="text/javascript">
+        Honeybadger.configure({
+          apiKey: 'd839a21f',
+          environment: 'production'
+        });
+      </script>
+
+    <% end %>
+
   </head>
   <body>
     <header style="text-align: center;">
