--- a/lib/thexr_web/templates/layout/root.html.heex
+++ b/lib/thexr_web/templates/layout/root.html.heex
@@ -23,8 +23,10 @@
 
   </head>
   <body>
-    <header style="text-align: center;">
+    <header>
+      <a href="/">TheXR Space</a> | 
       <a href="/m/spaces">Spaces</a>
+
     </header>
     <%= @inner_content %>
   </body>
