Session 46: Set session unique_id, pass token to socket, setup Phoenix Presence

--- a/lib/thexr_web/templates/space/show.html.heex
+++ b/lib/thexr_web/templates/space/show.html.heex
@@ -5,4 +5,5 @@
 
 <script>
   window['serializedSpace'] = <%= raw Thexr.Spaces.serialize(@space) %>;
+  window['userToken'] = '<%= @user_token %>';
 </script>
