--- a/lib/thexr_web/templates/space/show.html.heex
+++ b/lib/thexr_web/templates/space/show.html.heex
@@ -5,5 +5,6 @@
 
 <script>
   window['serializedSpace'] = <%= raw Thexr.Spaces.serialize(@space) %>;
+  window['memberId'] = '<%= @member_id %>'
   window['userToken'] = '<%= @user_token %>';
 </script>
