handle error when server is gone but front-end keeps trying to reconnect

--- a/lib/thexr_web/templates/page/index.html.heex
+++ b/lib/thexr_web/templates/page/index.html.heex
@@ -1,4 +1,10 @@
 <section>
   <h1><%= gettext "Welcome to %{name}", name: "thexr.space" %></h1>
   <p>Create and Share Experiences in an Extended Reality Space</p>
+  <p>
+    This is a DEMO site used to prototype ideas for an immersive space.
+  </p>
+  <p>
+  Any content created on this server will be deleted within a few days.
+  </p>
 </section>
