--- a/lib/thexr_web/templates/layout/xr_root.html.heex
+++ b/lib/thexr_web/templates/layout/xr_root.html.heex
@@ -11,7 +11,10 @@
     
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
     <script src="https://preview.babylonjs.com/babylon.js"></script>
+    <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     <script src="https://preview.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+    <script src="https://preview.babylonjs.com/gui/babylon.gui.min.js"></script>
+    <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
     <script src="https://download.agora.io/sdk/release/AgoraRTC_N-4.8.1.js"></script>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/orchestrator.js")}></script>
     
