session 91: gave up on presence fetch it's stale or cached

--- a/lib/thexr_web/templates/space/show.html.heex
+++ b/lib/thexr_web/templates/space/show.html.heex
@@ -25,6 +25,6 @@
 
 <script>
   window['serializedSpace'] = <%= raw Thexr.Spaces.serialize(@space) %>;
-  window['memberId'] = '<%= @member_id %>'
+  window['member_id'] = '<%= @member_id %>'
   window['userToken'] = '<%= @user_token %>';
 </script>
