session 107 and 108 primitive and color gui menus

--- a/lib/thexr_web/templates/page/index.html.heex
+++ b/lib/thexr_web/templates/page/index.html.heex
@@ -1,6 +1,20 @@
 <section>
   <h1><%= gettext "Welcome to %{name}", name: "thexr.space" %></h1>
-  <p>Create and Share Experiences in an Extended Reality Space</p>
+  <div>
+  [TODO: Insert image of virtual reality avatars building something in 3D]
+  </div>
+  <p>VR is fun and amazing but there is one problem...  there isn't enough content because creating VR experiences usually requires learning programming or a software like Unity or Unreal</p>
+
+  <p>Thexr.space is the Easiest way to build your own mazes, games, escape rooms, presentations and experience them in virtual reality with your friends</p>
+  <p>Works in the browser with nothing to download</p>
+  <p>Create your own space and edit by pulling in primitives and shaping them to your design</p>
+
+  <ul>
+    <li>Build your own virtual escape room and play with your friends</li>
+    <li>Host your own mediation sessions in peaceful surroundings</li>
+    <li>Works on any device with a browser</li>
+  </ul>
+
   <p>
     This is a DEMO site used to prototype ideas for an immersive space.
   </p>
