--- a/lib/thexr_web/templates/layout/xr_root.html.heex
+++ b/lib/thexr_web/templates/layout/xr_root.html.heex
@@ -10,6 +10,7 @@
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/orchestrator.css")}/>
     
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
+    <script src="https://cdn.babylonjs.com/ammo.js"></script>
     <script src="https://preview.babylonjs.com/babylon.js"></script>
     <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     <script src="https://preview.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
