--- a/lib/thexr_web/templates/page/index.html.heex
+++ b/lib/thexr_web/templates/page/index.html.heex
@@ -3,22 +3,20 @@
   <div>
   [TODO: Insert image of virtual reality avatars building something in 3D]
   </div>
-  <p>VR is fun and amazing but there is one problem...  there isn't enough content because creating VR experiences usually requires learning programming or a software like Unity or Unreal</p>
-
-  <p>Thexr.space is the Easiest way to build your own mazes, games, escape rooms, presentations and experience them in virtual reality with your friends</p>
-  <p>Works in the browser with nothing to download</p>
-  <p>Create your own space and edit by pulling in primitives and shaping them to your design</p>
-
-  <ul>
-    <li>Build your own virtual escape room and play with your friends</li>
-    <li>Host your own mediation sessions in peaceful surroundings</li>
-    <li>Works on any device with a browser</li>
-  </ul>
-
   <p>
-    This is a DEMO site used to prototype ideas for an immersive space.
+  Connect with friends in virtual reality experiences.
   </p>
+  
+  <ul>
+    <li>Join or start a group</li>
+    <li>Find events that interest you</li>
+    <li>Create customized spaces</li>
+   </ul>
+  
+  <h2>
+    This project is still in development.
+  </h2>
   <p>
-  Any content created on this server will be deleted within a few days.
+  Any content created on this server is subject to deletion.
   </p>
 </section>
