--- a/lib/thexr_web/templates/layout/xr_root.html.heex
+++ b/lib/thexr_web/templates/layout/xr_root.html.heex
@@ -8,7 +8,9 @@
     <%= live_title_tag assigns[:page_title] || "thexr.space", suffix: "" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/orchestrator.css")}/>
-    
+    <script>
+      var environment_name = "<%= Application.get_env(:thexr, :environment_name) %>";
+    </script>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
     <script src="https://cdn.babylonjs.com/ammo.js"></script>
     <script src="https://preview.babylonjs.com/babylon.js"></script>
