--- a/lib/thexr_web/templates/test/index.html.heex
+++ b/lib/thexr_web/templates/test/index.html.heex
@@ -1,17 +1,32 @@
-<section>
-  <h1>Test Page</h1>
-   <script src="https://cdn.babylonjs.com/ammo.js"></script>
-    <script src="https://preview.babylonjs.com/babylon.js"></script>
-    <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-    <script src="https://preview.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
-    <script src="https://preview.babylonjs.com/gui/babylon.gui.min.js"></script>
-    <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
-    <script src="https://download.agora.io/sdk/release/AgoraRTC_N-4.11.1.js"></script>
-    <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/spec.css")}/>
-    
 
-    <div id="test-results">
-    </div>
-    <script defer type="text/javascript" src={Routes.static_path(@conn, "/assets/spec.js")}></script>
-    
-</section>
+
+<style>
+  html, body {
+      overflow: hidden;
+      width   : 100%;
+      height  : 100%;
+      margin  : 0;
+      padding : 0;
+
+      background: radial-gradient(ellipse at top, #201111, transparent),
+            radial-gradient(ellipse at bottom, #000021, transparent);
+  }
+
+  .spaceCanvas {
+      position: absolute;
+      width   : 100%;
+      height  : 100%;
+      touch-action: none;
+      outline: none;
+      z-index: 1;
+  }
+
+</style>
+
+<canvas class="spaceCanvas" id="dummy"></canvas>
+
+<script>
+  window['member_id'] = '<%= @member_id %>'
+  window['userToken'] = '<%= @user_token %>';
+</script>
+
