--- a/lib/thexr_web/templates/test/index.html.heex
+++ b/lib/thexr_web/templates/test/index.html.heex
@@ -26,7 +26,9 @@
 <canvas class="spaceCanvas" id="dummy"></canvas>
 
 <script>
-  window['member_id'] = '<%= @member_id %>'
+  window['member_id'] = '<%= @member_id %>';
   window['userToken'] = '<%= @user_token %>';
+  window['space_id'] = 'test-space';
+  window['webrtc_channel_id'] = 'test-channel';
 </script>
 
