separate test endpoint to blank and default and forward messages to other clients

--- a/lib/thexr_web/templates/test/index.html.heex
+++ b/lib/thexr_web/templates/test/index.html.heex
@@ -30,5 +30,6 @@
   window['userToken'] = '<%= @user_token %>';
   window['space_id'] = '<%= @space_id %>';
   window['webrtc_channel_id'] = '<%= @webrtc_channel_id %>';
+  window['systems'] = '<%= @systems %>';
 </script>
 
