--- a/lib/thexr_web/templates/layout/xr_test_root.html.heex
+++ b/lib/thexr_web/templates/layout/xr_test_root.html.heex
@@ -7,6 +7,8 @@
     <%= csrf_meta_tag() %>
     <%= live_title_tag assigns[:page_title] || "thexr.space", suffix: "" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
+    <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/spec.css")}/>
+    
     <script>
       var environment_name = "<%= Application.get_env(:thexr, :environment_name) %>";
     </script>
