--- a/lib/thexr_web/live/space_live/index.html.heex
+++ b/lib/thexr_web/live/space_live/index.html.heex
@@ -14,6 +14,7 @@
 <table>
   <thead>
     <tr>
+      <th>ID</th>
       <th>Name</th>
       <th>Description</th>
      
@@ -23,6 +24,7 @@
   <tbody id="spaces">
     <%= for space <- @spaces do %>
       <tr id={"space-#{space.id}"}>
+        <td><%= space.id %></td>
         <td><%= space.name %></td>
         <td><%= space.description %></td>
         <td>
