--- a/lib/thexr_web/templates/space/show.html.heex
+++ b/lib/thexr_web/templates/space/show.html.heex
@@ -26,7 +26,7 @@
 <script>
   window['member_id'] = '<%= @member_id %>';
   window['userToken'] = '<%= @user_token %>';
-  window['space_id'] = '<%= @space.id %>';
+  window['space'] = <%= raw Jason.encode!(@space) %>;
   window['webrtc_channel_id'] = '<%= @webrtc_channel_id %>';
   window['systems'] = '<%= @systems %>';
 </script>
