ability to import named mesh, and hud

--- a/lib/thexr_web/templates/object/index.html.heex
+++ b/lib/thexr_web/templates/object/index.html.heex
@@ -3,14 +3,14 @@
 <table>
   <thead>
     <tr>
-      <th>id</th>
-     
+      <th>ID</th>
+      <th>Name</th>
     </tr>
   </thead>
   <tbody>
 <%= for object <- @objects do %>
     <tr>
-      <td><%= object.id %></td>
+      <td><%= object.id %></td><td><%= object.name %></td>
     </tr>
 <% end %>
   </tbody>
