some bug fixes, inline grabbable

--- a/lib/thexr_web/templates/layout/map_maker_root.html.heex
+++ b/lib/thexr_web/templates/layout/map_maker_root.html.heex
@@ -15,6 +15,7 @@
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
     <script src="https://cdn.babylonjs.com/ammo.js"></script>
     <script src="https://preview.babylonjs.com/babylon.js"></script>
+    <script src="https://preview.babylonjs.com/earcut.min.js"></script>
     <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     <script src="https://preview.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
     <script src="https://preview.babylonjs.com/gui/babylon.gui.min.js"></script>
